# asian-food-recommender

./: .dockerignore  .gitignore  .railwayignore  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  railway_start.py  requirements.txt  run_combined.py  run_frontend.py  run_server.py  start.sh  start_frontend.sh
data/: dishes.json
frontend/: app.py  requirements.txt
frontend/.streamlit/: config.toml
scripts/: benchmark.py  validate_data.py
src/: config.py  logging_config.py
src/api/: errors.py  main.py
src/models/: dish.py  recommendation.py  user.py
src/services/: dish_repository.py  embedding_service.py  recommendation_engine.py  similarity_engine.py
src/utils/: embeddings.py
tests/: conftest.py  test_api.py  test_models.py  test_services.py
